--- a/safer-file-handles-bytestring.cabal
+++ b/safer-file-handles-bytestring.cabal
@@ -18,12 +18,12 @@ source-repository head
 
 Library
   GHC-Options: -Wall
-  build-depends: base               >= 4     && < 4.3
-               , bytestring         >= 0.9   && < 0.10
-               , regions            >= 0.6   && < 0.7
-               , transformers       >= 0.2   && < 0.3
-               , explicit-iomodes   >= 0.3   && < 0.4
-               , safer-file-handles >= 0.6   && < 0.7
+  build-depends: base               	     >= 4   && < 4.3
+               , bytestring         	     >= 0.9 && < 0.10
+               , regions            	     >= 0.6 && < 0.7
+               , transformers       	     >= 0.2 && < 0.3
+               , explicit-iomodes-bytestring >= 0.1 && < 0.2
+               , safer-file-handles          >= 0.6 && < 0.7
   exposed-modules: Data.ByteString.SaferFileHandles
                    Data.ByteString.Char8.SaferFileHandles
                    Data.ByteString.Lazy.SaferFileHandles
